--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body{
 }
 #main-header {
     padding-top:20px; 
-    color:
+    color: #eee;
+    border: 1px #333 solid;
 }
 #main-header h1 {
     text-align:center;
